--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,4 @@
-﻿*.css linguist-detectable=false
-*.java linguist-detectable=false
-*.python linguist-detectable=true 
-*.js linguist-detectable=false
-*.html linguist-detectable=false  
-*.xml linguist-detectable=false
+﻿# .gitattributes
+* linguist-vendored
+producthunt/* linguist-vendored
+*.py linguist-vendored=false
